--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@emailjs/browser": "^4.1.0",
     "@fancyapps/ui": "^5.0.33",
+    "@googlemaps/js-api-loader": "^1.16.8",
+    "@googlemaps/markerclusterer": "^2.5.3",
     "@hookform/resolvers": "^3.3.2",
     "@popperjs/core": "^2.11.8",
     "@reduxjs/toolkit": "^2.0.1",
@@ -46,6 +48,7 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@types/google.maps": "^3.58.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
